# vixbasior

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Analyzer/: VixaAnalyzer.cpp  VixaAnalyzer.h
Source/DSP/: Effects.h  Filters.h  Modulation.h  Oscillator.h  VixaEngine.h
